--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,14 +5,14 @@ homepage: https://github.com/DarshanGowda0/GeoFlutterFire
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
-  flutter: ">=1.12.0"
+  flutter: '>=2.10.4'
 
 dependencies:
   flutter:
     sdk: flutter
-  cloud_firestore: ^3.1.6
-  rxdart: ^0.27.3
-  flutter_lints: ^1.0.0
+  cloud_firestore:
+  rxdart:
+  flutter_lints:
 
 dev_dependencies:
   flutter_test:
